--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "com.unity.ads": "2.0.8",
-    "com.unity.analytics": "3.3.2",
     "com.unity.collab-proxy": "1.2.15",
+    "com.unity.entities": "0.0.12-preview.29",
     "com.unity.package-manager-ui": "2.1.1",
+    "com.unity.physics": "0.0.1-preview.1",
     "com.unity.purchasing": "2.0.1",
     "com.unity.render-pipelines.high-definition": "5.6.1-preview",
-    "com.unity.textmeshpro": "1.3.0",
+    "com.unity.rendering.hybrid": "0.0.1-preview.9",
     "com.unity.timeline": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
