--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,23 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.2.15",
-    "com.unity.entities": "0.0.12-preview.29",
-    "com.unity.package-manager-ui": "2.1.1",
-    "com.unity.physics": "0.0.1-preview.1",
-    "com.unity.purchasing": "2.0.1",
-    "com.unity.render-pipelines.high-definition": "5.6.1-preview",
-    "com.unity.rendering.hybrid": "0.0.1-preview.9",
-    "com.unity.timeline": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "1.0.0",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.collab-proxy": "1.2.16",
+    "com.unity.collections": "file:/Users/joe/Sources/dots-2/Samples/Packages/com.unity.collections",
+    "com.unity.entities": "file:/Users/joe/Sources/dots-2/Samples/Packages/com.unity.entities",
+    "com.unity.ide.rider": "1.1.0",
+    "com.unity.ide.vscode": "1.1.2",
+    "com.unity.jobs": "file:/Users/joe/Sources/dots-2/Samples/Packages/com.unity.jobs",
+    "com.unity.physics": "0.2.4-preview",
+    "com.unity.purchasing": "2.0.6",
+    "com.unity.render-pipelines.high-definition": "7.1.2",
+    "com.unity.rendering.hybrid": "file:/Users/joe/Sources/dots/Samples/Packages/com.unity.rendering.hybrid",
+    "com.unity.test-framework": "1.1.1",
+    "com.unity.timeline": "1.2.2",
+    "com.unity.ugui": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "1.3.7",
     "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
@@ -39,5 +47,6 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "registry": "https://artifactory.prd.cds.internal.unity3d.com/artifactory/api/npm/upm-candidates"
 }
