--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,16 +1,11 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.collections": "file:/Users/joe/Sources/dots-2/Samples/Packages/com.unity.collections",
-    "com.unity.entities": "file:/Users/joe/Sources/dots-2/Samples/Packages/com.unity.entities",
+    "com.unity.entities": "0.2.0-preview.18",
     "com.unity.ide.rider": "1.1.0",
-    "com.unity.ide.vscode": "1.1.2",
-    "com.unity.jobs": "file:/Users/joe/Sources/dots-2/Samples/Packages/com.unity.jobs",
+    "com.unity.ide.vscode": "1.1.3",
     "com.unity.physics": "0.2.4-preview",
-    "com.unity.render-pipelines.high-definition": "7.1.2",
-    "com.unity.rendering.hybrid": "file:/Users/joe/Sources/dots/Samples/Packages/com.unity.rendering.hybrid",
-    "com.unity.test-framework": "1.1.1",
-    "com.unity.xr.legacyinputhelpers": "1.3.7",
+    "com.unity.render-pipelines.high-definition": "7.1.5",
+    "com.unity.rendering.hybrid": "0.2.0-preview.18",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -42,6 +37,5 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  },
-  "registry": "https://artifactory.prd.cds.internal.unity3d.com/artifactory/api/npm/upm-candidates"
+  }
 }
