--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
-    "com.unity.entities": "0.2.0-preview.18",
-    "com.unity.ide.rider": "1.1.0",
+    "com.unity.burst": "1.2.0-preview.11",
+    "com.unity.collections": "file:/Users/joe/Sources/dots-3/Samples/Packages/com.unity.collections",
+    "com.unity.entities": "file:/Users/joe/Sources/dots-3/Samples/Packages/com.unity.entities",
+    "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.3",
-    "com.unity.physics": "0.2.4-preview",
-    "com.unity.render-pipelines.high-definition": "7.1.5",
+    "com.unity.jobs": "file:/Users/joe/Sources/dots-3/Samples/Packages/com.unity.jobs",
+    "com.unity.physics": "0.2.5-preview.1",
+    "com.unity.render-pipelines.high-definition": "7.1.6",
     "com.unity.rendering.hybrid": "0.2.0-preview.18",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
