--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
     "com.unity.burst": "1.2.0-preview.11",
-    "com.unity.collections": "file:/Users/joe/Sources/dots-3/Samples/Packages/com.unity.collections",
-    "com.unity.entities": "file:/Users/joe/Sources/dots-3/Samples/Packages/com.unity.entities",
+    "com.unity.collections": "file:/Users/joe/Sources/dots-2/Samples/Packages/com.unity.collections",
+    "com.unity.entities": "file:/Users/joe/Sources/dots-2/Samples/Packages/com.unity.entities",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.3",
-    "com.unity.jobs": "file:/Users/joe/Sources/dots-3/Samples/Packages/com.unity.jobs",
+    "com.unity.jobs": "file:/Users/joe/Sources/dots-2/Samples/Packages/com.unity.jobs",
     "com.unity.physics": "0.2.5-preview.1",
     "com.unity.render-pipelines.high-definition": "7.1.6",
-    "com.unity.rendering.hybrid": "0.2.0-preview.18",
+    "com.unity.rendering.hybrid": "file:/Users/joe/Sources/dots-2/Samples/Packages/com.unity.rendering.hybrid",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
