--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
-    "com.unity.entities": "0.2.0-preview.18",
-    "com.unity.ide.rider": "1.1.0",
-    "com.unity.ide.vscode": "1.1.3",
-    "com.unity.physics": "0.2.4-preview",
-    "com.unity.render-pipelines.high-definition": "7.1.5",
-    "com.unity.rendering.hybrid": "0.2.0-preview.18",
+    "com.unity.entities": "0.9.1-preview.6",
+    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.0",
+    "com.unity.ide.vscode": "1.1.4",
+    "com.unity.physics": "0.3.1-preview",
+    "com.unity.render-pipelines.high-definition": "9.0.0-preview.10",
+    "com.unity.rendering.hybrid": "0.4.2-preview.6",
+    "com.unity.searcher": "4.0.9",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -37,5 +39,6 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "registry": "https://artifactory.prd.cds.internal.unity3d.com/artifactory/api/npm/upm-candidates"
 }
