--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
-    "com.unity.entities": "0.9.1-preview.6",
+    "com.unity.burst": "1.3.0-preview.8",
+    "com.unity.collections": "file:../dots/Samples/Packages/com.unity.collections",
+    "com.unity.entities": "file:../dots/Samples/Packages/com.unity.entities",
+    "com.unity.jobs": "file:../dots/Samples/Packages/com.unity.jobs",
+    "com.unity.rendering.hybrid": "file:../dots/Samples/Packages/com.unity.rendering.hybrid",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.0",
     "com.unity.ide.vscode": "1.1.4",
     "com.unity.physics": "0.3.1-preview",
     "com.unity.render-pipelines.high-definition": "9.0.0-preview.10",
-    "com.unity.rendering.hybrid": "0.4.2-preview.6",
     "com.unity.searcher": "4.0.9",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
