--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.animation": "0.3.0-preview.9",
     "com.unity.collections": "file:../dots/Samples/Packages/com.unity.collections",
+    "com.unity.dataflowgraph": "0.14.0-preview.1",
     "com.unity.entities": "file:../dots/Samples/Packages/com.unity.entities",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.0",
