--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.render-pipelines.high-definition": "9.0.0-preview.15",
     "com.unity.rendering.hybrid": "file:../dots/Samples/Packages/com.unity.rendering.hybrid",
     "com.unity.searcher": "4.0.9",
+	"com.unity.timeline.dots": "0.5.1-preview.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
